Fix images overflow to the content

--- a/sass/base/_elements.scss
+++ b/sass/base/_elements.scss
@@ -87,7 +87,7 @@ img, video, svg {
 	max-width: 100%;
 	height: auto;
 }
-embed, iframe, object {
+figure, embed, iframe, object {
 	max-width: 100%;
 }
 svg {
